# mif-dal

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md  deploy.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  mif-dal-publish.yml
dal/: __init__.py  dal.py  exceptions.py
dal/adapters/: __init__.py  dukascopy.py  in_memory.py  kraken.py  yahoo.py
dal/core/: __init__.py  config.py  handoff.py  pipeline.py  sources.py
dal/interfaces/: __init__.py  source.py
docs/: API.md  ARCHITECTURE.md  DAL_SPECIFICATION_v1.0.md
docs/archive/: DAL_Phase3_Plan_v1.2.md  IA_Mindsets_Principes_Indispensables_v1.1.md  ISSUE-DAL-P3-001.md  MIF_Component_Codification_v1.1.md  README.md  TRADUCTION_SUMMARY_FR.md  TRANSLATION_COMPLETED.md  deploy.sh  pre_publication_plan.md  session_start.sh  sprint_dal-001-summary.md  sprint_dal-002-summary.md
docs/archive/Pending/: DEBT_RECONCILED.md
docs/archive/kb/: KB-DAL-001.md  KB-DAL-002.md  KB-DAL-003.md  KB-DAL-004.md  KB-DAL-005.md
docs/archive/nix_tools/: session_end.sh
docs/archive/old_halo/: anamnese_state_last_fr.yaml
docs/archive/projet/: DAL_Phase3_Plan_v1.1.md  PUBLICATION_PROTOCOL.md  project_instructions.md
docs/archive/scripts/: adversarial_dal_check.py  cleanup_repo.sh  diagnose_and_fix_en.sh  fix_ruff.sh  translate_to_english.py  validate_dal_state.py  validate_environment.py
docs/archive/sprints/: HALO_DELTA_2026-07-09.md  HALO_MIGRATION.md
dukascopy/: DUKASCOPY_COMPLETE_GUIDE.md  conftest.py  setup_dukascopy_mif.sh  test_dukascopy_integration.py
scripts/: adversarial_dal_check_p3.py  dev.sh  final_commit.sh  test_install.py  verify_install.py
tests/: conftest.py  test_config.py  test_dal.py  test_dukascopy_adapter.py  test_exceptions.py  test_handoff.py  test_in_memory_source.py  test_integration.py  test_kraken_adapter.py  test_pipeline.py  test_source_interface.py  test_sources.py  test_yahoo_adapter.py
