[project]
name = "mif-dal"
version = "0.1.0"
description = "Data Abstraction Layer — MIF ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "mif-dqf>=1.2.0,<2.0.0",
    "yfinance>=1.3.0,<2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=dal --cov-report=term-missing -q"
markers = [
    "network: test qui fait de vrais appels réseau (skippé par défaut, utiliser --run-network)",
    "dukascopy: test qui appelle dukascopy-node via subprocess (réseau réel, lent — 30s à 2min)",
    "dry_run: test utilisant DukascopyClient(dry_run=True) — aucun réseau, toujours rapide",
]

# ── Variables d'environnement pour les tests ──────────────────────────────────
#
# DUKASCOPY_DRY_RUN=1  active le dry run dans DukascopyClient.from_env().
# Positionné ici, il s'applique à toute la session pytest sans modifier le code.
#
# Pour les appels réseau réels en CI ou en local :
#   DUKASCOPY_DRY_RUN=0 pytest -m dukascopy --run-network
#
# Décommenter la ligne ci-dessous pour activer le dry run par défaut dans pytest :
# env = ["DUKASCOPY_DRY_RUN=1"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
exclude = ["docs/archive/", "dukascopy/"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["dal"]

# ── Note : dukascopy-node (dépendance Node.js externe) ───────────────────────
#
# dukascopy-node n'est pas un package Python et ne figure donc pas dans
# [dependencies]. Son installation est gérée côté environnement Nix :
#
#   shell.nix / flake.nix  → pkgs.nodejs_20, pkgs.nodePackages.npm dans buildInputs
#                            + export NPM_GLOBAL="$HOME/.npm-global" dans shellHook
#
#   Installation (une seule fois par machine) :
#     bash setup_dukascopy_nixos_fixed.sh
#
#   Vérification dans le code Python :
#     subprocess.run(['npx', 'dukascopy-node', '--help'])  # exit 0 = OK
#     # NE PAS utiliser --version : retourne exit 1 même si installé (bug upstream)
#
#   Dry run (développement / CI sans réseau) :
#     from data.dukascopy_client import DukascopyClient
#     client = DukascopyClient(dry_run=True)        # explicite
#     client = DukascopyClient.from_env()           # lit DUKASCOPY_DRY_RUN
